HUP-14 feat: 이메일 로그인 백엔드 구현
